--- a/aaa.html
+++ b/aaa.html
@@ -16,6 +16,10 @@
     <script th:src="@{/js/bootstrap-bootbox/bootbox.js}" src="../static/js/bootstrap-bootbox/bootbox.js"></script>
 </head>
 <body>
-  <a href="../user/toLogin">登陆</a>
+            <a href="../user/toDeliver">发货时间</a>
+            <a href="../user/toCommodity">售后问题</a>
+            <a href="../user/toSale">售后/退款</a>
+            <a href="../user/toFreight">运费问题</a>
+            <a href="../user/toPayment">支付问题</a>
 </body>
 </html>
