--- a/freight.html
+++ b/freight.html
@@ -16,6 +16,14 @@
     <script th:src="@{/js/bootstrap-bootbox/bootbox.js}" src="../static/js/bootstrap-bootbox/bootbox.js"></script>
 </head>
 <body>
-  <a href="../user/toLogin">登陆</a>
+
+<div class="alert alert-warning alert-dismissible" role="alert">
+    <a href="../user/toAaa">返回</a>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong></strong>商品未满79元，将收取每单6元的配送费；
+
+    商品满79元即可享受免费配送服务。
+
+</div>
 </body>
 </html>
