--- a/payment.html
+++ b/payment.html
@@ -16,6 +16,12 @@
     <script th:src="@{/js/bootstrap-bootbox/bootbox.js}" src="../static/js/bootstrap-bootbox/bootbox.js"></script>
 </head>
 <body>
-  <a href="../user/toLogin">登陆</a>
+<div class="alert alert-warning alert-dismissible" role="alert">
+    <a href="../user/toAaa">返回</a>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong></strong> 如果您的订单无法支付，是因为您创建订单时选择支付的微信/支付宝账号和订单详情页选择支付的微信/支付宝账户不一致，您可以继续使用创建订单时选择支付的微信/支付宝账户支付或重新下单支付。
+
+</div>
+
 </body>
 </html>
