--- a/commodity.html
+++ b/commodity.html
@@ -16,6 +16,11 @@
     <script th:src="@{/js/bootstrap-bootbox/bootbox.js}" src="../static/js/bootstrap-bootbox/bootbox.js"></script>
 </head>
 <body>
-  <a href="../user/toLogin">登陆</a>
+<div class="alert alert-warning alert-dismissible" role="alert">
+    <a href="../user/toAaa">返回</a>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong></strong>如果您收到的商品发现少了，为了保障您的利益，建议您保留好相关凭证，并立即联系门店客服人员，协商补发事项，如需退款打开手机app-我的-到家订单申请退款，我们将于2个小时内退还您相应的商品金额。
+
+</div>
 </body>
 </html>
