--- a/sale.html
+++ b/sale.html
@@ -16,6 +16,12 @@
     <script th:src="@{/js/bootstrap-bootbox/bootbox.js}" src="../static/js/bootstrap-bootbox/bootbox.js"></script>
 </head>
 <body>
-  <a href="../user/toLogin">登陆</a>
+
+<div class="alert alert-warning alert-dismissible" role="alert">
+    <a href="../user/toAaa">返回</a>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong></strong> 您可以登陆app-我的-门店/到家订单，找到相应的订单，点击申请退款即可
+</div>
+
 </body>
 </html>
